--- a/views/admin-lte/cm-admin/applications.ejs
+++ b/views/admin-lte/cm-admin/applications.ejs
@@ -36,7 +36,7 @@
                                 Activate
                             </button>
 
-                            <button class="btn btn-sm btn-primary" ng-show="widget.isActive"
+                            <button class="btn btn-sm btn-warning" ng-show="widget.isActive"
                                     ng-click="deactivate(widget.application, widget.name)">
                                 Deactivate
                             </button>
@@ -70,7 +70,7 @@
                                 Activate
                             </button>
 
-                            <button class="btn btn-sm btn-primary" ng-show="widget.isActive"
+                            <button class="btn btn-sm btn-warning" ng-show="widget.isActive"
                                     ng-click="deactivate(widget.application, widget.name)">
                                 Deactivate
                             </button>
@@ -104,7 +104,7 @@
                                 Activate
                             </button>
 
-                            <button class="btn btn-sm btn-primary" ng-show="widget.isActive"
+                            <button class="btn btn-sm btn-warning" ng-show="widget.isActive"
                                     ng-click="deactivate(widget.application, widget.name)">
                                 Deactivate
                             </button>
