--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -20,7 +20,7 @@
             <ul class="nav navbar-nav">
                 <!-- Messages: style can be found in dropdown.less-->
                 <li class="dropdown tasks-menu" ngCloak ng-hide="user">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    <a style="cursor: pointer" class="dropdown-toggle" data-toggle="dropdown">
                         <b>Login</b>
                     </a>
                     <ul class="dropdown-menu">
