--- a/views/admin-lte/catalogs/course.ejs
+++ b/views/admin-lte/catalogs/course.ejs
@@ -48,8 +48,8 @@
                     </li>
                     <li ng-show="isOwner">
                         <a  style="cursor: pointer;"
-                            data-toggle="modal" data-target="#modalAppGallery"
-                            title="Add or remove dashboard widgets">
+                            data-toggle="modal" data-target="#widgetGallery"
+                            title="Add or remove preview widgets">
                             <i class="ionicons ion-android-apps"></i> &nbsp; WIDGETS STORE</a>
                     </li>
                 </ul>
@@ -132,10 +132,10 @@
         <!-- /.content -->
 
         <!-- modal contents -->
-        <div class="row">
-            <div class="modal" id="modalAppGallery" tabindex="-1" role="dialog"
-                 aria-labelledby="modal app gallery" aria-hidden="true">
-                <div ng-include="'/apps/gallery/course-preview'"></div>
+        <div class="row" ng-controller="WidgetGalleryController">
+            <div class="modal" id="widgetGallery" tabindex="-1" role="dialog"
+                 aria-labelledby="wigets gallery" aria-hidden="true" ng-init="initData('course-preview')">
+                <div ng-include="'/widgets/gallery'"></div>
             </div>
         </div>
 
