--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -16,10 +16,7 @@
     <link href="/admin-lte/css/skin-blue.min.css" rel="stylesheet" type="text/css" />
     <link href="/admin-lte/css/app.css" rel="stylesheet" type="text/css" />
 
-
-    <!--<link href="/xeditable/xeditable.css" rel="stylesheet">
-    <link href="/d3/tree.css" rel="stylesheet" type="text/css" />
-    <link href="/jquery/jsplumb.css" rel="stylesheet">-->
+    <!-- <link href="/jquery/jsplumb.css" rel="stylesheet"> -->
 
     <link rel="stylesheet" type="text/css" href="/ng-tags-input/ng-tags-input.min.css">
     <!--[if lt IE 9]>
