--- a/views/admin-lte/catalogs/editCourseModal.ejs
+++ b/views/admin-lte/catalogs/editCourseModal.ejs
@@ -85,10 +85,10 @@
                                     <!-- Button -->
                                     <div class="controls">
                                         <button class="btn btn-md btn-primary">Save Edit</button>
-                                        <!--<button type="button" class="btn btn-md btn-primary"
+                                        <button type="button" class="btn btn-md btn-primary"
                                                 data-dismiss="modal" aria-label="Close" ng-click="cancel()">
                                             <span aria-hidden="true">Cancel</span>
-                                        </button>-->
+                                        </button>
                                     </div>
                                 </div>
                             </div>
