--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -14,6 +14,6 @@
 <script src="/ng-file-upload/ng-file-upload-shim.min.js"></script>
 <script src="/ng-file-upload/ng-file-upload.min.js"></script>
 <script src="/angular/courseMapper.js"></script>
-<script src="/xeditable/xeditable.min.js" type="text/javascript"></script>
 <!-- AdminLTE App -->
 <script src="/admin-lte/js/app.min.js" type="text/javascript"></script>
+<script src="/admin-lte/js/libs.js" type="text/javascript"></script>
