--- a/views/admin-lte/profile.ejs
+++ b/views/admin-lte/profile.ejs
@@ -102,10 +102,11 @@
 <script src="/jquery/jquery-ui.min.js"></script>
 <script src="/gridstack/lodash.min.js"></script>
 <script src="/gridstack/gridstack.js"></script>
-<!--add sample analytics widgets js source-->
+<!--add chart.js source-->
 <script src="/chartjs/Chart.min.js"></script>
-<script src="/chartjs/data.js"></script>
-<script src="/chartjs/options.js"></script>
+<!--add statics files from public/my-course/-->
+<script src="/my-course/data.js"></script>
+<script src="/my-course/options.js"></script>
 
 <script>
     $(function initiateDraggableGrid() {
