--- a/views/admin-lte/catalogs/course.ejs
+++ b/views/admin-lte/catalogs/course.ejs
@@ -116,7 +116,7 @@
                                 <!-- analytics-->
                                 <div id="course-preview-widgets" class="grid-stack col-xs-12 col-md-3"
                                      ng-controller="widgetController"
-                                     ng-init="location='course-preview'" onFinishRender="initiateDraggableGrid()">
+                                     ng-init="location='course-preview'">
 
                                     <div class="grid-stack-item"
                                          data-gs-x="0"
@@ -187,36 +187,6 @@
 <link rel="stylesheet" type="text/css" href="/course-analytics/user_profile.css">
 
 <script>
-    function initiateDraggableGrid() {
-        var options = {
-            cell_height: 400,
-            vertical_margin: 10,
-            resizable: false,
-            allowed_grids: [0, 4, 8]
-        };
-
-        var curNode = {x:0, y:0};
-        var $gs = $('.grid-stack');
-        $gs.gridstack(options);
-
-        $gs.on('onStartMove', function (e, node) {
-            curNode.x = node.x;
-            curNode.y = node.y;
-        });
-
-        $gs.on('onFinishDrop', function (e, node) {
-            var o = $(node.el);
-            if(options.allowed_grids.indexOf(node.x) < 0){
-                o.attr('data-gs-x', curNode.x).attr('data-gs-y', curNode.y);
-            }
-            console.log("onFinishDrop");
-        });
-
-        $gs.on('onMove', function (e, node) {
-            console.log(node.x + " ++ " + node.y);
-        });
-    }
-
     $(document).ready(function() {
         initiateDraggableGrid();
 
