--- a/views/admin-lte/apps/gallery.ejs
+++ b/views/admin-lte/apps/gallery.ejs
@@ -17,8 +17,14 @@
                             <div class="caption">
                                 <h4>{{widget.name}}</h4>
                                 <p>{{widget.description}}</p>
-                                <a style="cursor: pointer" ng-click="install(location, widget.application, widget.name, course._id)" class="btn btn-primary btn-sm" role="button"><i class="fa fa-download"></i> Install </a>
-                                <span class="label label-info pull-right">W:{{widget.width}} by H:{{widget.height}}</span>
+                                <a ng-hide="isInstalled(widget._id)" style="cursor: pointer"
+                                   ng-click="install(location, widget.application, widget.name, course._id)"
+                                   class="btn btn-primary btn-sm" role="button"><i class="fa fa-download"></i> Install </a>
+                                <a ng-show="isInstalled(widget._id)" style="cursor: pointer"
+                                   ng-click="uninstall(location, widget.application, widget.name, course._id)"
+                                   class="btn btn-warning btn-sm" role="button"><i class="fa fa-minus-square"></i> Uninstall </a>
+
+                                <span class="label label-info">W:{{widget.width}} by H:{{widget.height}}</span>
                             </div>
                         </div>
                     </div>
