--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -4,6 +4,7 @@
 <script src="/jquery/jquery-ui.min.js"></script>
 <script src="/jquery/jquery.ui.touch-punch.min.js"></script>
 <script src="/jquery/jquery.jsPlumb-1.7.5.js"></script>
+<script src="/gridstack/lodash.min.js"></script>
 <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/bootstrap/js/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
 <script src="/angular/angular.min.js" type="text/javascript"></script>
