the installed widget go to the correct locations

--- a/views/admin-lte/profile.ejs
+++ b/views/admin-lte/profile.ejs
@@ -98,7 +98,7 @@
 
 <script>
     $(document).ready(function() {
-        initiateDraggableGrid();
+        initiateDraggableGrid(['#user-profile-widgets']);
     });
 </script>
 
