--- a/views/widgets/blankBox.ejs
+++ b/views/widgets/blankBox.ejs
@@ -1,4 +1,6 @@
-
+<!--
+this is an example or a basic template of a widget
+-->
 <div class="box">
     <div class="box-header with-border">
         <h3 class="box-title">Title</h3>
